# kbruch

./: .craft.ini  .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  TODO  VERSION  kbruch.appdata.xml  kbruch.lsm  org.kde.kbruch.appdata.xml  snapcraft.yaml
doc/: CMakeLists.txt  index.docbook  man-kbruch.1.docbook
po/ar/: kbruch.po
po/ast/: kbruch.po
po/be/: kbruch.po
po/bg/: kbruch.po
po/bn/: kbruch.po
po/br/: kbruch.po
po/bs/: kbruch.po
po/ca/: kbruch.po
po/ca/docs/kbruch/: index.docbook  man-kbruch.1.docbook
po/ca@valencia/: kbruch.po
po/cs/: kbruch.po
po/cy/: kbruch.po
po/da/: kbruch.po
po/de/: kbruch.po
po/de/docs/kbruch/: index.docbook  man-kbruch.1.docbook
po/el/: kbruch.po
po/en_GB/: kbruch.po
po/eo/: kbruch.po
po/es/: kbruch.po
po/es/docs/kbruch/: index.docbook  man-kbruch.1.docbook
po/et/: kbruch.po
po/et/docs/kbruch/: index.docbook  man-kbruch.1.docbook
po/eu/: kbruch.po
po/fa/: kbruch.po
po/fi/: kbruch.po
po/fr/: kbruch.po
po/fr/docs/kbruch/: index.docbook  man-kbruch.1.docbook
po/ga/: kbruch.po
po/gl/: kbruch.po
po/he/: kbruch.po
po/hi/: kbruch.po
po/hne/: kbruch.po
po/hr/: kbruch.po
po/hu/: kbruch.po
po/ia/: kbruch.po
po/is/: kbruch.po
po/it/: kbruch.po
po/it/docs/kbruch/: index.docbook  man-kbruch.1.docbook
po/ja/: kbruch.po
po/ka/: kbruch.po
po/kk/: kbruch.po
po/km/: kbruch.po
po/ko/: kbruch.po
po/lt/: kbruch.po
po/lv/: kbruch.po
po/mk/: kbruch.po
po/ml/: kbruch.po
po/mr/: kbruch.po
po/ms/: kbruch.po
po/nb/: kbruch.po
po/nds/: kbruch.po
po/ne/: kbruch.po
po/nl/: kbruch.po
po/nl/docs/kbruch/: index.docbook  man-kbruch.1.docbook
po/nn/: kbruch.po
po/oc/: kbruch.po
po/pa/: kbruch.po
po/pl/: kbruch.po
po/pt/: kbruch.po
po/pt/docs/kbruch/: index.docbook  man-kbruch.1.docbook
po/pt_BR/: kbruch.po
po/pt_BR/docs/kbruch/: index.docbook  man-kbruch.1.docbook
po/ro/: kbruch.po
po/ru/: kbruch.po
po/ru/docs/kbruch/: index.docbook  man-kbruch.1.docbook
po/sa/: kbruch.po
po/se/: kbruch.po
po/si/: kbruch.po
po/sk/: kbruch.po
po/sl/: kbruch.po
po/sl/docs/kbruch/: index.docbook  man-kbruch.1.docbook
po/sq/: kbruch.po
po/sv/: kbruch.po
po/sv/docs/kbruch/: index.docbook  man-kbruch.1.docbook
po/ta/: kbruch.po
po/tg/: kbruch.po
po/th/: kbruch.po
po/tr/: kbruch.po
po/ug/: kbruch.po
po/uk/: kbruch.po
po/uk/docs/kbruch/: index.docbook  man-kbruch.1.docbook
po/xh/: kbruch.po
po/zh_CN/: kbruch.po
po/zh_TW/: kbruch.po
src/: AppMenuWidget.cpp  AppMenuWidget.h  AppMenuWidgetui.rc  CMakeLists.txt  ExerciseBase.cpp  ExerciseBase.h  ExerciseCompare.cpp  ExerciseCompare.h  ExerciseConvert.cpp  ExerciseConvert.h  ExerciseFactorize.cpp  ExerciseFactorize.h  ExerciseMixedNumbers.cpp  ExerciseMixedNumbers.h  ExercisePercentage.cpp  ExercisePercentage.h  FractionBaseWidget.cpp  FractionBaseWidget.h  FractionPainter.cpp  FractionPainter.h  FractionRingWidget.cpp  FractionRingWidget.h  FractionRingWidgetui.rc  KBruch.cpp  KBruch.h  KBruchVersion.h  MainQtWidget.cpp  MainQtWidget.h  Makefile.am  Messages.sh  PrimeFactorsLineEdit.cpp  PrimeFactorsLineEdit.h  PrimeNumber.cpp  PrimeNumber.h  Ratio.cpp  Ratio.h  RatioWidget.cpp  RatioWidget.h  RationalWidget.cpp  RationalWidget.h  (+82 more)
src/pics/: CMakeLists.txt  oxsc-action-kbruch_exercise_conversion.svgz  oxsc-action-kbruch_exercise_factorisation.svgz
testcases/: CMakeLists.txt  Makefile.am  README  kbruch_test.cpp  primenumber_test.cpp  primzahl_test.cpp  ratio_test.cpp
