kde4_install_icons( ${DATA_INSTALL_DIR}/kbruch/icons)
install( FILES exercise_common.png exercise_compare.png exercise_conversion.png exercise_factorization.png exercise_percentage.png freestyle_1.png freestyle.png learning.png learning_1.png test_case_1.png test_case.png  DESTINATION  ${DATA_INSTALL_DIR}/kbruch/pics )
